<resources>
    <string name="app_name">끼록</string>
    <string name="kki_rok">끼록!</string>
    <string name="check">확인</string>

    <string name="carrot">감성적인 당근 당첨!</string>
    <string name="broccoli">활발한 브로콜리 당첨!</string>
    <string name="green_onion">카리스마 대파 당첨!</string>

    <string name="carrot_comment">안녕하세요!\n저는 흔하디 흔한 당근이에요^오^</string>
    <string name="broccoli_comment">와썹가이즈~\n내 풍성한 머리좀 볼래?ㅋㅋ</string>
    <string name="green_onion_comment">반가워! 나는 멋쟁이 대파!\n라면에 대파 안 넣으면 미워할거야</string>

    <!-- 로그인 및 회원가입 -->
    <string name="sing_up">회원가입</string>
    <string name="sign_in_with_email">이메일로 로그인</string>
    <string name="input_email_hint">이메일 입력</string>
    <string name="input_password_hint">비밀번호 입력</string>
    <string name="missing_password">비밀번호를 잊어버렸어요</string>
    <string name="sign_in_input_error">이메일 혹은 비밀번호가 맞지 않습니다</string>
    <string name="next">다음</string>
    <string name="start">시작하기</string>
    <string name="finish">완료</string>
    <string name="login_text">아침에도\n점심에도\n저녁에도</string>
    <string name="login_with_email">이메일 로그인</string>
    <string name="sign_in_error">로그인 실패</string>

    <string name="sing_up_text">회원가입</string>
    <string name="sign_up_email_text">이메일을 입력해 주세요</string>
    <string name="sign_up_input_email_hint">kkilog@gmail.com</string>
    <string name="sign_up_input_email_helper">입력한 이메일로 인증번호가 전송됩니다</string>
    <string name="input_email_error">올바른 이메일 형식을 입력해주세요\n예시) kkilo@gmail.com</string>
    <string name="sign_up_email_valid_error">이미 사용중인 이메일입니다.</string>

    <string name="sign_up_password_text">비밀번호를 설정해 주세요</string>
    <string name="sign_up_input_passwd_hint">비밀번호 8자 이상</string>
    <string name="sign_up_input_passwd_check_hint">비밀번호 재입력</string>
    <string name="sign_up_input_passwd_error">비밀번호가 일치하지 않습니다</string>

    <string name="certification_text">인증번호를 입력하세요</string>
    <string name="input_certification">인증번호 6자리</string>
    <string name="certification_send_second">전송된 인증번호는 10분동안 유효합니다</string>
    <string name="certification_send_first">다음으로 전송된 인증번호 :</string>
    <string name="resent_certification">인증번호 재발송</string>
    <string name="resent_certification_comment">인증번호를 다시 보냈어요. 이메일을 확인 후\n인증번호를 다시 입력하세요.</string>
    <string name="certification_error">올바른 인증번호가 아닙니다</string>

    <string name="sign_up_nick_text">반가워요!\n닉네임을 설정해 주세요</string>
    <string name="sign_up_input_nick_hint">콩순이</string>
    <string name="sign_up_input_nick_error">사용중인 닉네임입니다</string>
    <string name="sign_up_nick_size_error">닉네임이 잘못되었습니다</string>

    <string name="start_kkilog">이제 끼록을 시작해 볼까요</string>
    <string name="sign_up_find_character_text">사용자 닉네임과 어울리는\n캐릭터를 찾고있어요…</string>

    <string name="check_email_text">가입한 이메일 주소를\n 입력해 주세요</string>
    <string name="reset_email_not_exist">존재하지 않는 이메일 입니다</string>
    <string name="reset_passwd_text">비밀번호를 재설정해 주세요</string>

    <!-- 온보딩 -->
    <string name="onboarding_memo">Memo</string>
    <string name="onboarding_memo_comment">직접 요리한 레시피를 기록합니다.\n음식사진과 나만의 킥을 올려요!</string>

    <string name="onboarding_connect">Connect</string>
    <string name="onboarding_connect_comment">친구와 함께 끼니를 공유하고\n가벼운 소통 채널로 활용해요!</string>

    <string name="onboarding_grow">Grow</string>
    <string name="onboarding_grow_comment">끼록은 꾸준한 기록과 관심을 먹고 자란답니다.\n캐릭터와 함께 무한히 성장해 보세요!</string>

    <string name="today_text">오늘</string>
    <string name="what_eat_text">뭐먹지</string>
    <string name="home_click_text">클릭!</string>

    <!-- 이미지 피커 -->
    <string name="do_kkirok_text">끼록하기</string>
    <string name="gallery">갤러리</string>
    <!--끼록 -->
    <string name="kkilog_toolbar_text">끼록하기</string>
    <string name="kkilog_food_name_text">요리 이름</string>
    <string name="kkilog_food_description_text">오늘 만든 요리는 어땠나요? \n 레시피,맛,기분 어떤 것이든 좋아요</string>
    <string name="kkilog_kick_hint_text">특별한 조리비법을 한 줄로 알려주세요</string>
    <string name="kkilog_kick_count">%d / 20자</string>
    <string name="kkilog_image_count">%d/10</string>

    <string name="server_error">서버 에러입니다.</string>
    <!-- 권한 -->
    <string name="alert">"알림"</string>
    <string name="alert_message">"끼록을 이용하기 위해서는 권한이 필요합니다. 권한 재설정을 하시겠습니까?"</string>
    <string name="alert_yes">예</string>
    <string name="alert_no">아니오</string>

    <!-- 바텀 네비게이션 -->
    <string name="HOME">"HOME"</string>
    <string name="PLUS">"PLUS"</string>
    <string name="RECIPE">"RECIPE"</string>

    <!-- 나의 프로필 -->
    <string name="my_profile">"나의 프로필"</string>
    <string name="my_profile_level">"Lv.2"</string>
    <string name="my_profile_nickname">"콩순이"</string>
    <string name="write">작성</string>
    <string name="my_profile_total_kkilog">총 끼록</string>
    <string name="my_profile_following">팔로잉</string>
    <string name="my_profile_follower">팔로워</string>
    <string name="my_profile_scrap">스크랩</string>
    <!-- kki_log feed 3dot -->
    <string name="edit_kkilog_feed">게시글 수정</string>
    <string name="delete_kkilog_feed">삭제</string>

    <!-- kki_log_bottomSheet -->
    <string name="simple_kki_log">간단 끼록</string>
    <string name="detail_kki_log">상세 끼록</string>
    <string name="add_kki_log">끼록 추가</string>
    <string name="kki_log_text">끼록</string>

    <string name="my_profile_follow">팔로우</string>
    <string name="my_profile_do_following">팔로잉 하기</string>
    <string name="my_profile_setting">설정</string>
    <string name="my_profile_setting_interlocked">연동된 이메일</string>
    <string name="my_profile_logout">로그아웃</string>
    <string name="my_profile_delete_account">계정삭제</string>
    <string name="my_profile_search_nick">친구 닉네임 검색</string>
    <string name="my_profile_following_result_nothing">검색 결과가 없습니다.</string>
    <string name="do_logout">로그아웃 할까요?</string>
    <string name="logout_description">로그인 정보가 초기화 됩니다.</string>
    <string name="cancel">취소</string>
    <string name="do_delete">이 계정을 삭제할까요?</string>
    <string name="delete_description">저장된 정보가 모두 삭제됩니다.</string>
    <string name="delete">삭제</string>

    <string-array name="my_profile_follow_list">
        <item>@string/my_profile_follower</item>
        <item>@string/my_profile_following</item>
    </string-array>

    <!-- 내 끼록  -->
    <string name="my_kkilog">내 끼록</string>
    <string name="empty_kkilog">흠..기록한 끼록이 없어요...\n지금 추가해 보세요!</string>
    <string-array name="my_kkilog_list">
        <item>@string/simple_kki_log</item>
        <item>@string/detail_kki_log</item>
    </string-array>

    <!-- 툴팁 -->
    <string name="tip_kkilog">맛있게 먹은 끼니를 공유하거나 음식 레시피를 기록하기</string>
    <string name="tip_follow_text">팔로잉 추가</string>
    <string name="tip_follow">친구 닉네임으로 연결하고, 끼니 상황을 함께 공유하기</string>
    <string name="tip_grow_text">캐릭터의 성장</string>
    <string name="tip_grow">끼록 추가를 통해 캐릭터와 함께 먹레벨 성장하기</string>

    <!-- 홈 다이얼로그 -->
    <string name="level_up_dialog_title">한 단계 성장하셨군요!</string>
    <string name="level_up_dialog_text">"끼록을 먹고 자라면서 더욱 튼튼해졌어요.\n앞으로도 함께해요.</string>
    <string name="level_up_dialog_button_text">기쁘게 반겨주기</string>

    <string name="detail_kki_log_step_number">%d끼</string>
    <string name="detail_kki_log_step_num">STEP.%d</string>
    <string name="detail_kki_log_introduce_length_count">%d/20자</string>
    <string name="edit">편집</string>
</resources>
