<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/intro_orange">

        <TextView
            android:id="@+id/login_text"
            style="@style/Headline2_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/kki_rok_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/kki_rok_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/kki_rok"
            app:layout_constraintBottom_toTopOf="@id/kki_rok_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/kki_rok_text"
            style="@style/Headline1_Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kki_rok"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kki_rok_image" />

        S<androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_with_email"
            style="@style/Body1_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/radius_white"
            android:stateListAnimator="@null"
            android:textColor="@color/main_orange"
            android:text="@string/sign_in_with_email"
            app:layout_constraintBottom_toTopOf="@+id/kki_rok_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kki_rok_sign_up"
            style="@style/Body1_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="41dp"
            android:background="@drawable/radius_orange"
            android:stateListAnimator="@null"
            android:text="@string/sing_up_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
