<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/radius_dialog">

            <TextView
                android:id="@+id/tv_do_logout"
                style="@style/Body1_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/do_logout"
                android:textColor="@color/brown_gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_logout_description"
                style="@style/Body2_Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/logout_description"
                android:textColor="@color/brown_gray_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_do_logout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:drawableTop="@color/brown_gray_50"
                android:drawableEnd="@color/brown_gray_50"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textAppearance="@style/Body1_Regular"
                android:textColor="@color/brown_gray_400"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@color/brown_gray_50"
                android:drawableTop="@color/brown_gray_50"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/my_profile_logout"
                android:textAppearance="@style/Body1_Bold"
                android:textColor="@color/red_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_logout_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>