<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_login_with_email"
            style="@style/Headline1_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/brown_gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_input_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="36dp"
            android:theme="@style/EditTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_with_email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Body1_Regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_email_hint"
                android:paddingBottom="20dp"
                android:textColor="@color/brown_gray_300" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/brown_gray_300"
            android:theme="@style/EditTextStyle"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="@id/et_input_email"
            app:layout_constraintStart_toStartOf="@id/et_input_email"
            app:layout_constraintTop_toBottomOf="@id/et_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_input_password"
                style="@style/Body1_Regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:paddingBottom="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Body2_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/missing_password"
            android:textColor="@color/brown_gray_300"
            app:layout_constraintBottom_toTopOf="@id/btn_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_finish"
            style="@style/Body1_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/radius_gray"
            android:paddingVertical="12dp"
            android:text="@string/finish"
            android:textColor="@color/brown_gray_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>